[gd_scene load_steps=64 format=2]

[ext_resource path="res://craftpix-675522-free-pixel-art-tiny-hero-sprites/3 Dude_Monster/Dude_Monster_Jump_8.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://craftpix-675522-free-pixel-art-tiny-hero-sprites/3 Dude_Monster/pixil-frame-0 (9).png" type="Texture" id=3]
[ext_resource path="res://craftpix-675522-free-pixel-art-tiny-hero-sprites/3 Dude_Monster/Dude_Monster_Run_6.png" type="Texture" id=4]
[ext_resource path="res://craftpix-675522-free-pixel-art-tiny-hero-sprites/3 Dude_Monster/Dude_Monster_Idle_4.png" type="Texture" id=5]
[ext_resource path="res://craftpix-675522-free-pixel-art-tiny-hero-sprites/3 Dude_Monster/Dude_Monster_Climb_4.png" type="Texture" id=6]
[ext_resource path="res://craftpix-675522-free-pixel-art-tiny-hero-sprites/2 Owlet_Monster/Owlet_Monster_Climb_4.png" type="Texture" id=7]
[ext_resource path="res://uipack_fixed/PNG/blue_button02.png" type="Texture" id=8]
[ext_resource path="res://kenney_fontpackage/Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Sounds/JumpSound.wav" type="AudioStream" id=10]
[ext_resource path="res://uipack_fixed/PNG/blue_panel.png" type="Texture" id=11]
[ext_resource path="res://craftpix-675522-free-pixel-art-tiny-hero-sprites/2 Owlet_Monster/Owlet_Monster_Idle_4.png" type="Texture" id=12]
[ext_resource path="res://Sounds/PowerupSound.mp3" type="AudioStream" id=13]
[ext_resource path="res://Sounds/KeySound.wav" type="AudioStream" id=14]
[ext_resource path="res://Tilemap/tiles.png" type="Texture" id=15]
[ext_resource path="res://Sounds/CoinSound.wav" type="AudioStream" id=16]
[ext_resource path="res://craftpix-675522-free-pixel-art-tiny-hero-sprites/3 Dude_Monster/Double_Jump_Dust_5.png" type="Texture" id=17]
[ext_resource path="res://craftpix-675522-free-pixel-art-tiny-hero-sprites/2 Owlet_Monster/Owlet_Monster_Throw_4.png" type="Texture" id=18]
[ext_resource path="res://craftpix-675522-free-pixel-art-tiny-hero-sprites/2 Owlet_Monster/Owlet_Monster_Jump_8.png" type="Texture" id=19]
[ext_resource path="res://craftpix-675522-free-pixel-art-tiny-hero-sprites/2 Owlet_Monster/Owlet_Monster_Run_6.png" type="Texture" id=20]

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 26 ), SubResource( 28 ), SubResource( 65 ) ],
"loop": true,
"name": "Climb",
"speed": 7.0
}, {
"frames": [ SubResource( 29 ) ],
"loop": true,
"name": "ClimbIdle",
"speed": 7.0
}, {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "Falling",
"speed": 7.0
}, {
"frames": [ SubResource( 24 ) ],
"loop": true,
"name": "Jump",
"speed": 7.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Run",
"speed": 7.0
}, {
"frames": [ SubResource( 64 ) ],
"loop": true,
"name": "Throw",
"speed": 7.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
} ]

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 19 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 19 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 20 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 20 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 20 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 20 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 20 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 20 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 18 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 12 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=84]
animations = [ {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ) ],
"loop": true,
"name": "Climb",
"speed": 7.0
}, {
"frames": [ SubResource( 70 ) ],
"loop": true,
"name": "ClimbIdle",
"speed": 7.0
}, {
"frames": [ SubResource( 71 ) ],
"loop": true,
"name": "Falling",
"speed": 7.0
}, {
"frames": [ SubResource( 72 ) ],
"loop": true,
"name": "Jump",
"speed": 7.0
}, {
"frames": [ SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ) ],
"loop": true,
"name": "Run",
"speed": 7.0
}, {
"frames": [ SubResource( 79 ) ],
"loop": true,
"name": "Throw",
"speed": 7.0
}, {
"frames": [ SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.5, 12 )

[sub_resource type="DynamicFont" id=59]
size = 13
font_data = ExtResource( 9 )

[sub_resource type="RectangleShape2D" id=60]
extents = Vector2( 6, 12.5 )

[sub_resource type="CanvasItemMaterial" id=63]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=62]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = -720.0
anim_speed = 1.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -31 )
z_index = 18
collision_layer = 2
script = ExtResource( 2 )

[node name="BlueSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
z_index = 18
frames = SubResource( 22 )
animation = "Throw"
playing = true

[node name="OwletSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 84 )
animation = "idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -12 )
z_index = 22
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -9 )
z_index = 80
current = true

[node name="LadderCheck" type="RayCast2D" parent="."]
position = Vector2( 0, -14 )
z_index = 23
enabled = true
cast_to = Vector2( 0, 18 )
collision_mask = 3
collide_with_areas = true
collide_with_bodies = false

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Popup" type="Popup" parent="."]
margin_left = -81.0
margin_top = -68.0
margin_right = 81.0
margin_bottom = 49.0

[node name="Sprite3" type="Sprite" parent="Popup"]
position = Vector2( 81, 58.5 )
scale = Vector2( 1.62, 1.17 )
texture = ExtResource( 11 )

[node name="TextureButton" type="Button" parent="Popup"]
margin_left = 9.0
margin_top = 90.0
margin_right = 63.0
margin_bottom = 108.0
flat = true

[node name="Sprite3" type="Sprite" parent="Popup/TextureButton"]
position = Vector2( 27, 10 )
scale = Vector2( 0.284211, 0.408163 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Popup/TextureButton"]
margin_right = 54.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 0.47451, 0, 1 )
custom_fonts/font = SubResource( 59 )
text = "Quit
"
align = 1

[node name="TextureButton2" type="Button" parent="Popup"]
margin_left = 9.0
margin_top = 63.0
margin_right = 63.0
margin_bottom = 81.0
flat = true

[node name="Sprite2" type="Sprite" parent="Popup/TextureButton2"]
position = Vector2( 27, 10 )
scale = Vector2( 0.284211, 0.408163 )
texture = ExtResource( 8 )

[node name="Label2" type="Label" parent="Popup/TextureButton2"]
margin_right = 54.0
margin_bottom = 20.0
custom_colors/font_color = Color( 1, 0.47451, 0, 1 )
custom_fonts/font = SubResource( 59 )
text = "Resume"
align = 1

[node name="ColorRect" type="ColorRect" parent="Popup"]
margin_left = -89.0
margin_top = -47.0
margin_right = 259.0
margin_bottom = 167.0
color = Color( 0.254902, 0.247059, 0.247059, 0.533333 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -14 )
z_index = 22
shape = SubResource( 60 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="POwerupAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -4.727

[node name="KeySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = 4.909

[node name="KeyCollectedEmblem" type="Sprite" parent="."]
position = Vector2( -148, -90 )
texture = ExtResource( 15 )
region_enabled = true
region_rect = Rect2( 140, 23, 18, 12 )

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="JumpParticle" type="Particles2D" parent="."]
material = SubResource( 63 )
position = Vector2( 0, -8 )
z_index = 90
emitting = false
amount = 1
one_shot = true
speed_scale = 2.5
process_material = SubResource( 62 )
texture = ExtResource( 17 )

[node name="ThrowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_JumpBufferTimer_timeout"]
[connection signal="timeout" from="CoyoteJumpTimer" to="." method="_on_CoyoteJumpTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
